# scikit-rebate

./: .gitignore  404.html  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  tests.py
Scripts/: MScoring.ipynb  MasterRunScript.ipynb  README.txt
ScriptsOld/: Heatmaps.ipynb  MasterRunScript.ipynb
analysis/: check_run_validity.py  global_rba_rankings.py  job_feature_selection.py  job_global_rba_rankings.py  job_global_rba_rankings_old.py  job_process_heatmap.py  job_process_heatmap_unified.py  job_process_mannwhitney.py  job_process_rba_rankings.py  job_process_wilcoxon.py  job_rebate_analysis.py  make_lsf_jobs.py  pytests.txt  run_commands.txt  run_feature_selection.py  run_global_rba_rankings.py  run_global_rba_rankings_old.py  run_process_heatmap.py  run_process_heatmap_unified.py  run_process_mannwhitney.py  run_process_rba_rankings.py  run_process_wilcoxon.py  run_rebate_analysis.py
citing/: index.html
data/: 3Class_Datasets_Loc_2_01.csv  GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1.csv  GAMETES_Epistasis_2-Way_continuous_endpoint_a_20s_1600her_0.4__maf_0.2_EDM-2_01.csv  GAMETES_Epistasis_2-Way_missing_values_0.1_a_20s_1600her_0.4__maf_0.2_EDM-2_01.csv  README.md
demo/: Heatmaps.ipynb  dataset_test.ipynb  examples_basic_usage.ipynb  feature_type_test.ipynb  heatmaps.ipynb  run_benchmark.py
docs/: 404.html  index.html  search.html  sitemap.xml
docs_sources/: citing.md  index.md  installing.md  releases.md  using.md
installing/: index.html
releases/: index.html
scripts/: job_feature_selection.py  runAlg.py  (+1 more)
(+44 files in other folders)
