[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skrebate"
dynamic = ["version"]

description = "Feature selection algorithms based on Relief-based methods"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
  "machine learning",
  "feature selection",
  "relief",
  "scikit-learn",
  "interpretability"
]

authors = [
  {name = "Ryan Urbanowicz", email = "ryanurbanowicz@gmail.com"}
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy",
  "scipy",
  "scikit-learn"
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov",
  "flake8",
  "mypy"
]

[project.urls]
"Source Code" = "https://github.com/UrbsLab/scikit-rebate"

[tool.setuptools.dynamic]
version = {attr = "skrebate._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["skrebate*"]